added banner and responsive

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FR Fitness</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
+
 <body class="bg-primary open-sans-font">
     <header>
         <nav class="header">
@@ -23,13 +25,25 @@
         <section class="banner">
             <div class="banner-container">
                 <div class="banner-title">
-                    <h1 class="title">Get body in <br><span id="font-chng">shape</span> & stay <br>healthy</h1>
-                    <p class="description">A huge selection of health and fitness content, healthy recipes<br>and transformation stories to help you get fit and stay fit!</p>
-                    <button class="btn-primary">Join Club Now!</button>
-                    <button class="btn-second">Download App</button>
+                    <h1 class="title">Get body in <span id="font-chng">shape</span> & stay healthy</h1>
+                    <p class="description">A huge selection of health and fitness content, healthy recipes and
+                        transformation stories to help you get fit and stay fit!</p>
+                    <div class="btn-container">
+                        <button class="btn-primary">Join Club Now!</button>
+                        <button class="btn-second">Download App</button>
+                    </div>
                 </div>
                 <div class="banner-subtitle">
-                    <img src="images/Images 2.png" alt="">
+                    <img class="banner-image" src="images/Images 2.png" alt="">
+                    <button id="video-card" class="cards">
+                        <div class="ball"></div>
+                        <span id="card-title-1">350+</span><br>
+                        <span>Video tutorial</span>
+                    </button>
+                    <button id="Workout-card" class="cards">
+                        <span id="card-title-2">500+</span><br>
+                        <span>Free Workout Videos</span>
+                    </button>
                 </div>
             </div>
         </section>
@@ -38,4 +52,5 @@
 
     </footer>
 </body>
+
 </html>
