--- a/index.html
+++ b/index.html
@@ -47,6 +47,34 @@
                 </div>
             </div>
         </section>
+        <section class="habit padding-primary">
+            <div class="habit-container">
+                <h1 class="habit-title">Change Your Habits</h1>
+                <p class="description habit-subtitle">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+                <div class="fitness">
+                    <div class="fitness-container">
+                        <img class="fitness-image" src="images/image 3.png" alt="">
+                        <h3 class="fitness-title">Movement</h3>
+                        <p class="description fitness-description">We believe fitness should be accessible to everyone</p>
+                    </div>
+                    <div class="fitness-container">
+                        <img class="fitness-image" src="images/image 2.png" alt="">
+                        <h3 class="fitness-title">Time</h3>
+                        <p class="description fitness-description">We believe fitness should be accessible to everyone</p>
+                    </div>
+                    <div class="fitness-container">
+                        <img class="fitness-image" src="images/image 4.png" alt="">
+                        <h3 class="fitness-title">Practice</h3>
+                        <p class="description fitness-description">We believe fitness should be accessible to everyone</p>
+                    </div>
+                    <div class="fitness-container">
+                        <img class="fitness-image" src="images/image 5.png" alt="">
+                        <h3 class="fitness-title">Weight Loss</h3>
+                        <p class="description fitness-description">We believe fitness should be accessible to everyone</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
