--- a/index.html
+++ b/index.html
@@ -50,27 +50,97 @@
         <section class="habit padding-primary">
             <div class="habit-container">
                 <h1 class="habit-title">Change Your Habits</h1>
-                <p class="description habit-subtitle">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+                <p class="description habit-subtitle">We believe fitness should be accessible to everyone, everywhere,
+                    regardless of income or access to a gym.</p>
                 <div class="fitness">
                     <div class="fitness-container">
                         <img class="fitness-image" src="images/image 3.png" alt="">
                         <h3 class="fitness-title">Movement</h3>
-                        <p class="description fitness-description">We believe fitness should be accessible to everyone</p>
+                        <p class="description fitness-description">We believe fitness should be accessible to everyone
+                        </p>
                     </div>
                     <div class="fitness-container">
                         <img class="fitness-image" src="images/image 2.png" alt="">
                         <h3 class="fitness-title">Time</h3>
-                        <p class="description fitness-description">We believe fitness should be accessible to everyone</p>
+                        <p class="description fitness-description">We believe fitness should be accessible to everyone
+                        </p>
                     </div>
                     <div class="fitness-container">
                         <img class="fitness-image" src="images/image 4.png" alt="">
                         <h3 class="fitness-title">Practice</h3>
-                        <p class="description fitness-description">We believe fitness should be accessible to everyone</p>
+                        <p class="description fitness-description">We believe fitness should be accessible to everyone
+                        </p>
                     </div>
                     <div class="fitness-container">
                         <img class="fitness-image" src="images/image 5.png" alt="">
                         <h3 class="fitness-title">Weight Loss</h3>
-                        <p class="description fitness-description">We believe fitness should be accessible to everyone</p>
+                        <p class="description fitness-description">We believe fitness should be accessible to everyone
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="runner padding-primary">
+            <div class="runner-container">
+                <div class="details">
+                    <h1 class="section-title">Run an Extra
+                        Mile Easily</h1>
+                    <p class="description" id="runner-description">We believe fitness should be accessible to everyone
+                        everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+                    <button class="btn-primary">Join Now</button>
+                </div>
+                <div class="runner-image">
+                    <!-- <img src="images/run.jpg" alt="" class="runner-image"> -->
+                </div>
+            </div>
+        </section>
+        <section class="our-team padding-primary">
+            <div class="team">
+                <h1 class="section-title">Meet Our Team</h1>
+                <p class="description section-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.
+                </p>
+            </div>
+            <div class="team-container">
+                <div class="trainers">
+                    <img src="images/trainer1.png" alt="" class="team-image">
+                    <div class="team-title">
+                        <h3 class="team-subtitle">Jerome Bell</h3>
+                        <p class="team-description">Trainer</p>
+                    </div>
+                </div>
+                <div class="trainers">
+                    <img src="images/trainer2.png" alt="" class="team-image">
+                    <div class="team-title">
+                        <h3 class="team-subtitle">Cameron Williamson</h3>
+                        <p class="team-description">Trainer</p>
+                    </div>
+                </div>
+                <div class="trainers">
+                    <img src="images/trainer3.png" alt="" class="team-image">
+                    <div class="team-title">
+                        <h3 class="team-subtitle">Darrell Steward</h3>
+                        <p class="team-description">Trainer</p>
+                    </div>
+                </div>
+                <div class="trainers">
+                    <img src="images/trainer4.png" alt="" class="team-image">
+                    <div class="team-title">
+                        <h3 class="team-subtitle">Dianne Russell</h3>
+                        <p class="team-description">Trainer</p>
+                    </div>
+                </div>
+                <div class="trainers">
+                    <img src="images/trainer5.png" alt="" class="team-image">
+                    <div class="team-title">
+                        <h3 class="team-subtitle">Cody Fisher</h3>
+                        <p class="team-description">Trainer</p>
+                    </div>
+                </div>
+                <div class="trainers">
+                    <img src="images/trainer6.png" alt="" class="team-image">
+                    <div class="team-title">
+                        <h3 class="team-subtitle">Theresa Webb</h3>
+                        <p class="team-description">Trainer</p>
                     </div>
                 </div>
             </div>
