added bmi, footer and responsive

--- a/index.html
+++ b/index.html
@@ -94,10 +94,73 @@
                 </div>
             </div>
         </section>
+        <section class="bmi">
+            <div class="bmi-section-title">
+                <h1 class="section-title">BMI Calculator</h1>
+                <p class="description">We believe fitness should be accessible to everyone, everywhere, regardless of
+                    income or access to a gym.</p>
+            </div>
+            <div class="bmi-container">
+                <div class="bmi-table">
+                    <h1 class="table-tilte">BMI Calculator Chart</h1>
+                    <table>
+                        <thead>
+                            <tr>
+                                <td>BMI</td>
+                                <td>Weight Status</td>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Below 18.5</td>
+                                <td>Underweight</td>
+                            </tr>
+                            <tr>
+                                <td>18.5 24.9</td>
+                                <td>Healthy</td>
+                            </tr>
+                            <tr>
+                                <td>25.0 29.9</td>
+                                <td>Overweight</td>
+                            </tr>
+                            <tr>
+                                <td>30.0 and Above</td>
+                                <td>Obese</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="bmi-calculator">
+                    <h1 class="bmi-title">Calculate your BMI</h1>
+                    <p class="description">We believe fitness should be accessible to everyone, everywhere, regardless
+                        of
+                        income or access to a gym.</p>
+                    <div class="bmi-inputs">
+                        <input type="text" name="" id="" class="bmi-data data" placeholder="Height/cm">
+                        <input type="text" name="" id="" class="bmi-data data" placeholder="Weight/kg">
+                        <input type="text" name="" id="" class="bmi-data data" placeholder="Age">
+                        <select name="gender" id="" class="bmi-gander data">
+                            <option value="Sex" class="data">Sex</option>
+                            <option value="Male" class="data">Male</option>
+                            <option value="Female" class="data">Female</option>
+                            <option value="Other" class="data">Other</option>
+                        </select>
+                        <select name="factor" id="factor" class="data">
+                            <option value="" class="data">Select an activity factor</option>
+                            <option value="" class="data"></option>
+                            <option value="" class="data"></option>
+                        </select>
+                        <br>
+                        <input type="button" value="Calculate" class="btn-primary" id="btn-calc">
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="our-team padding-primary">
             <div class="team">
                 <h1 class="section-title">Meet Our Team</h1>
-                <p class="description section-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.
+                <p class="description section-description">We believe fitness should be accessible to everyone,
+                    everywhere, regardless of income or access to a gym.
                 </p>
             </div>
             <div class="team-container">
@@ -147,7 +210,38 @@
         </section>
     </main>
     <footer>
-
+        <section class="foot padding-primary">
+            <div class="footer-container">
+                <div class="footer-columns">
+                    <h1 class="footer-title">FRFitness</h1>
+                    <p class="description" id="footer-description">We believe fitness should be accessible to everyone,
+                        everywhere, regardless of income or access to a gym. With hundreds of professional workouts.
+                    </p>
+                </div>
+                <div class="footer-columns">
+                    <h3 class="footer-subtile">Get Started</h3>
+                    <ul class="footer-list description">
+                        <li class="list-description">Service</li>
+                        <li class="list-description">Contact Us</li>
+                        <li class="list-description">Affiliate Program</li>
+                        <li class="list-description">About Us</li>
+                    </ul>
+                </div>
+                <div class="footer-columns">
+                    <h3 class="footer-subtile">Get Started</h3>
+                    <ul class="footer-list description">
+                        <li class="list-description">Fitness</li>
+                        <li class="list-description">Platform</li>
+                        <li class="list-description">Workout Libary</li>
+                        <li class="list-description">App Design</li>
+                    </ul>
+                </div>
+            </div>
+            <hr>
+            <div class="footer-bottom">
+                <p>All right reserved @Fitness 2024</p>
+            </div>
+        </section>
     </footer>
 </body>
 
