--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
             <div class="banner-container">
                 <div class="banner-title">
                     <h1 class="title">Get body in <span id="font-chng">shape</span> & stay healthy</h1>
-                    <p class="description">A huge selection of health and fitness content, healthy recipes and
-                        transformation stories to help you get fit and stay fit!</p>
+                    <p class="description">Fitness isn't about what you can lose. It's about what you can gain.</p>
                     <div class="btn-container">
                         <button class="btn-primary">Join Club Now!</button>
                         <button class="btn-second">Download App</button>
@@ -56,25 +55,25 @@
                     <div class="fitness-container">
                         <img class="fitness-image" src="images/image 3.png" alt="">
                         <h3 class="fitness-title">Movement</h3>
-                        <p class="description fitness-description">We believe fitness should be accessible to everyone
+                        <p class="description fitness-description">Fitness is defined as the quality or state of being fit and healthy.
                         </p>
                     </div>
                     <div class="fitness-container">
                         <img class="fitness-image" src="images/image 2.png" alt="">
                         <h3 class="fitness-title">Time</h3>
-                        <p class="description fitness-description">We believe fitness should be accessible to everyone
+                        <p class="description fitness-description"> Decide whether you’re more likely to stick with it in the morning or lunchtime or evening, and stick with that time.
                         </p>
                     </div>
                     <div class="fitness-container">
                         <img class="fitness-image" src="images/image 4.png" alt="">
                         <h3 class="fitness-title">Practice</h3>
-                        <p class="description fitness-description">We believe fitness should be accessible to everyone
+                        <p class="description fitness-description">Exercise is a gameplay mechanic in which the player can raise their passive skills, fitness, and strength.
                         </p>
                     </div>
                     <div class="fitness-container">
                         <img class="fitness-image" src="images/image 5.png" alt="">
                         <h3 class="fitness-title">Weight Loss</h3>
-                        <p class="description fitness-description">We believe fitness should be accessible to everyone
+                        <p class="description fitness-description">Weight loss, in the context of medicine, health, or physical fitness, refers to a reduction of the total body mass, by a mean loss of fluid, body fat.
                         </p>
                     </div>
                 </div>
@@ -85,8 +84,7 @@
                 <div class="details">
                     <h1 class="section-title">Run an Extra
                         Mile Easily</h1>
-                    <p class="description" id="runner-description">We believe fitness should be accessible to everyone
-                        everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+                    <p class="description" id="runner-description">When the stimulus (stress) is too low, our productivity suffers. But as the stress level rises, so does our productivity.</p>
                     <button class="btn-primary">Join Now</button>
                 </div>
                 <div class="runner-image">
@@ -97,8 +95,7 @@
         <section class="bmi">
             <div class="bmi-section-title">
                 <h1 class="section-title">BMI Calculator</h1>
-                <p class="description">We believe fitness should be accessible to everyone, everywhere, regardless of
-                    income or access to a gym.</p>
+                <p class="description">BMI is a measurement of a person's leanness or corpulence based on their height and weight, and is intended to quantify tissue mass.</p>
             </div>
             <div class="bmi-container">
                 <div class="bmi-table">
@@ -132,9 +129,7 @@
                 </div>
                 <div class="bmi-calculator">
                     <h1 class="bmi-title">Calculate your BMI</h1>
-                    <p class="description">We believe fitness should be accessible to everyone, everywhere, regardless
-                        of
-                        income or access to a gym.</p>
+                    <p class="description">Body mass index (BMI) is a measure of body fat based on height and weight that applies to adult men and women.</p>
                     <div class="bmi-inputs">
                         <input type="text" name="" id="" class="bmi-data data" placeholder="Height/cm">
                         <input type="text" name="" id="" class="bmi-data data" placeholder="Weight/kg">
@@ -159,8 +154,7 @@
         <section class="our-team padding-primary">
             <div class="team">
                 <h1 class="section-title">Meet Our Team</h1>
-                <p class="description section-description">We believe fitness should be accessible to everyone,
-                    everywhere, regardless of income or access to a gym.
+                <p class="description section-description">Our approach to coaching is focused on you, not the other way around. Meet your Coaching team at Springfield:
                 </p>
             </div>
             <div class="team-container">
@@ -214,8 +208,7 @@
             <div class="footer-container">
                 <div class="footer-columns">
                     <h1 class="footer-title">FRFitness</h1>
-                    <p class="description" id="footer-description">We believe fitness should be accessible to everyone,
-                        everywhere, regardless of income or access to a gym. With hundreds of professional workouts.
+                    <p class="description" id="footer-description">Fitness isn't about what you can lose. It's about what you can gain.
                     </p>
                 </div>
                 <div class="footer-columns">
