added membership, responsive & button adjustment

--- a/index.html
+++ b/index.html
@@ -92,6 +92,27 @@
                 </div>
             </div>
         </section>
+        <section class="member padding-primary">
+            <h1 class="section-title">GYM MEMBERSHIP PLANS FOR<br>SPRINGFIELD
+            </h1>
+            <p class="description">
+                We can't wait to help you reach your goals. If you have any questions about how to get started.
+            </p>
+            <div class="memberships">
+                <div class="membership-plans">
+                    <h2 class="membership-date">18-MONTH PLAN</h2>
+                    <h3 class="membership-prize">$17.99</h3>
+                    <p class="description member-description">Due Bi-weekly</p>
+                    <button class="btn-primary btn-member">Select</button>
+                </div>
+                <div class="membership-plans">
+                    <h2 class="membership-date">12-MONTH PLAN</h2>
+                    <h3 class="membership-prize">$19.99</h3>
+                    <p class="description member-description">Due Bi-weekly</p>
+                    <button class="btn-primary btn-member">Select</button>
+                </div>
+            </div>
+        </section>
         <section class="bmi">
             <div class="bmi-section-title">
                 <h1 class="section-title">BMI Calculator</h1>
