banner cards adjustments

--- a/index.html
+++ b/index.html
@@ -36,12 +36,16 @@
                     <img class="banner-image" src="images/Images 2.png" alt="">
                     <button id="video-card" class="cards">
                         <div class="ball"></div>
-                        <span id="card-title-1">350+</span><br>
-                        <span>Video tutorial</span>
+                        <div class="video-card-title-container">
+                            <span id="card-title-1">350+</span>
+                            <br>
+                        <span id="card-subtitle-1">Video tutorial</span>
+                        </div>
                     </button>
                     <button id="Workout-card" class="cards">
-                        <span id="card-title-2">500+</span><br>
-                        <span>Free Workout Videos</span>
+                        <span id="card-title-2">500+</span>
+                        <br>
+                        <span id="card-subtitle-2">Free Workout Videos</span>
                     </button>
                 </div>
             </div>
