--- a/index.html
+++ b/index.html
@@ -106,8 +106,7 @@
             </div>
         </section>
         <section class="member padding-primary">
-            <h1 class="section-title">GYM MEMBERSHIP PLANS FOR<br>SPRINGFIELD
-            </h1>
+            <h1 class="section-title">Gym Membership Plans</h1>
             <p class="description">
                 We can't wait to help you reach your goals. If you have any questions about how to get started.
             </p>
@@ -252,19 +251,19 @@
                 <div class="footer-columns">
                     <h3 class="footer-subtile">Get Started</h3>
                     <ul class="footer-list description">
-                        <li class="list-description">Service</li>
-                        <li class="list-description">Contact Us</li>
-                        <li class="list-description">Affiliate Program</li>
-                        <li class="list-description">About Us</li>
+                        <li class="list-description"><a href="">Service</a></li>
+                        <li class="list-description"><a href="">Contact Us</a></li>
+                        <li class="list-description"><a href="">Affiliate Program</a></li>
+                        <li class="list-description"><a href="">About Us</a></li>
                     </ul>
                 </div>
                 <div class="footer-columns">
                     <h3 class="footer-subtile">Get Started</h3>
                     <ul class="footer-list description">
-                        <li class="list-description">Fitness</li>
-                        <li class="list-description">Platform</li>
-                        <li class="list-description">Workout Libary</li>
-                        <li class="list-description">App Design</li>
+                        <li class="list-description"><a href="">Fitness</a></li>
+                        <li class="list-description"><a href="">Platform</a></li>
+                        <li class="list-description"><a href="">Workout Libary</a></li>
+                        <li class="list-description"><a href="">App Design</a></li>
                     </ul>
                 </div>
             </div>
